Update: fixed broken github links in index.html

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                           <div class="p-2">Bootstrap</div>
                       </div>
                       <div class="d-flex">
-                          <a href="vishruth.github.io" class="btn btn-primary btn-sm me-2">Visit</a>
-                          <a href="https://github.com/vishruthreddy18/vishruth.github.io" class="btn btn-secondary btn-sm">Code</a>
+                          <a href="#" class="btn btn-primary btn-sm me-2">Visit</a>
+                          <a href="https://github.com/vishruthreddy18/portfolio" class="btn btn-secondary btn-sm">Code</a>
                       </div>
                   </div>
               </div>
@@ -418,7 +418,7 @@
                   <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z"/>
                   <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z"/>
                 </svg>
-                <a href="https://vishruth.github.io" class="text-white">Home</a>
+                <a href="#" class="text-white">Home</a>
               </p>
               <p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
