Update: fixed broken link in index.html

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                           <div class="p-2">Bootstrap</div>
                       </div>
                       <div class="d-flex">
-                          <a href="#" class="btn btn-primary btn-sm me-2">Visit</a>
+                          <a href="https://vishruthreddy18.github.io/portfolio" class="btn btn-primary btn-sm me-2">Visit</a>
                           <a href="https://github.com/vishruthreddy18/portfolio" class="btn btn-secondary btn-sm">Code</a>
                       </div>
                   </div>
