--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="https://vishruthreddy18.github.io/portfolio/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#education">Education</a>
@@ -226,7 +226,7 @@
                           <div class="p-2">Bootstrap</div>
                       </div>
                       <div class="d-flex">
-                          <a href="https://vishruthreddy18.github.io/portfolio" class="btn btn-primary btn-sm me-2">Visit</a>
+                          <a href="https://vishruthreddy18.github.io/portfolio/" class="btn btn-primary btn-sm me-2">Visit</a>
                           <a href="https://github.com/vishruthreddy18/portfolio" class="btn btn-secondary btn-sm">Code</a>
                       </div>
                   </div>
@@ -373,7 +373,7 @@
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Quick Links</h6>
               <!-- <p>
-                <a href="#" class="text-white">Home</a>
+                <a href="#" class="text-white"></a>
               </p> -->
               <p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-mortarboard-fill" viewBox="0 0 16 16">
@@ -418,7 +418,7 @@
                   <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z"/>
                   <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z"/>
                 </svg>
-                <a href="#" class="text-white">Home</a>
+                <a href="https://vishruthreddy18.github.io/portfolio/" class="text-white">Home</a>
               </p>
               <p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
