--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link active" aria-current="page" href="#courses">Courses</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://drive.google.com/file/d/1fhL58jBgMmcLphgZuLWbBC28jf6Aq4d1/view?usp=drive_link">Resume</a>
+                  <a class="nav-link active" aria-current="page" href="https://drive.google.com/file/d/1fhL58jBgMmcLphgZuLWbBC28jf6Aq4d1/view">Resume</a>
               </li>
             </ul>
         </div>
